--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_SECRET=default secret
-REACT_APP_API=https://notable-notes.herokuapp.com/
+REACT_APP_API=https://notable-notes.herokuapp.com
